Add open mobilenet-v1-quantized results.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -603,6 +603,15 @@
     "        \"starting_weights_filename\": \"https://zenodo.org/record/2269307/files/mobilenet_v1_1.0_224.tgz\",\n",
     "        \"weight_transformations\": \"TFLite\"\n",
     "    }\n",
+    "    # Add MobileNet quantized.\n",
+    "    implementation_mobilenet_quantized = implementation+'-'+'mobilenet-quantized'\n",
+    "    implementation_benchmarks[implementation_mobilenet_quantized] = {\n",
+    "        \"input_data_types\": \"uint8\",\n",
+    "        \"weight_data_types\": \"uint8\",\n",
+    "        \"retraining\": \"no\",\n",
+    "        \"starting_weights_filename\": \"https://zenodo.org/record/2269307/files/mobilenet_v1_1.0_224_quant.tgz\",\n",
+    "        \"weight_transformations\": \"TFLite\"\n",
+    "    }\n",
     "    # Add ResNet.\n",
     "    implementation_resnet = implementation+'-'+'resnet'\n",
     "    implementation_benchmarks[implementation_resnet] = {\n",
@@ -613,10 +622,12 @@
     "        \"weight_transformations\": \"TF -> TFLite\"\n",
     "    }\n",
     "    # Add any MobileNets-v1,v2 model.\n",
-    "    def add_implementation_mobilenet(implementation_benchmarks, version, multiplier, resolution):\n",
+    "    def add_implementation_mobilenet(implementation_benchmarks, version, multiplier, resolution, quantized=False):\n",
     "        base_url = 'https://zenodo.org/record/2269307/files' if version == 1 else 'https://zenodo.org/record/2266646/files'\n",
-    "        url = '{}/mobilenet_v{}_{}_{}.tgz'.format(base_url, version, multiplier, resolution)\n",
-    "        benchmark = 'mobilenet-v{}-{}-{}'.format(version, multiplier, resolution)\n",
+    "        url = '{}/mobilenet_v{}_{}_{}{}.tgz'.format(base_url, version, multiplier, resolution, '_quant' if quantized else '')\n",
+    "        benchmark = 'mobilenet-v{}-{}-{}{}'.format(version, multiplier, resolution, '-quantized' if quantized else '')\n",
+    "        if quantized and (version != 1 or implementation != 'image-classification-tflite'):\n",
+    "            return\n",
     "        if implementation == 'image-classification-tflite':\n",
     "            weights_transformations = 'TFLite'\n",
     "        elif implementation == 'image-classification-armnn-tflite':\n",
@@ -625,8 +636,8 @@
     "            raise \"Unknown implementation '%s'!\" % implementation\n",
     "        implementation_benchmark = implementation+'-'+benchmark\n",
     "        implementation_benchmarks[implementation_benchmark] = {\n",
-    "            \"input_data_types\": \"fp32\",\n",
-    "            \"weight_data_types\": \"fp32\",\n",
+    "            \"input_data_types\": \"uint8\" if quantized else \"fp32\",\n",
+    "            \"weight_data_types\": \"uint8\" if quantized else \"fp32\",\n",
     "            \"retraining\": \"no\",\n",
     "            \"starting_weights_filename\": url,\n",
     "            \"weight_transformations\": weights_transformations\n",
@@ -636,7 +647,8 @@
     "    version = 1\n",
     "    for multiplier in [ 1.0, 0.75, 0.5, 0.25 ]:\n",
     "        for resolution in [ 224, 192, 160, 128 ]:\n",
-    "            add_implementation_mobilenet(implementation_benchmarks, version, multiplier, resolution)\n",
+    "            add_implementation_mobilenet(implementation_benchmarks, version, multiplier, resolution, quantized=False)\n",
+    "            add_implementation_mobilenet(implementation_benchmarks, version, multiplier, resolution, quantized=True)\n",
     "    # MobileNet-v2.\n",
     "    version = 2\n",
     "    for multiplier in [ 1.0, 0.75, 0.5, 0.35 ]:\n",
@@ -662,7 +674,7 @@
     "This C++ implementation uses TFLite to run TFLite models for Image Classification on CPUs.\n",
     "\n",
     "## Links\n",
-    "- [Jupyter notebook](https://nbviewer.jupyter.org/urls/dl.dropbox.com/s/1xlv5oacgobrfd4/mlpef-inference-v0.5-dividiti.ipynb)\n",
+    "- [Jupyter notebook](https://nbviewer.jupyter.org/urls/dl.dropbox.com/s/1xlv5oacgobrfd4/mlperf-inference-v0.5-dividiti.ipynb)\n",
     "- [Source code](https://github.com/ctuning/ck-mlperf/tree/master/program/image-classification-tflite-loadgen).\n",
     "- [Instructions](https://github.com/mlperf/inference/blob/master/v0.5/classification_and_detection/optional_harness_ck/classification/tflite/README.md).\n",
     "\"\"\"\n",
@@ -673,7 +685,7 @@
     "This C++ implementation uses ArmNN with the TFLite frontend to run TFLite models for Image Classification on Arm Cortex CPUs and Arm Mali GPUs.\n",
     "\n",
     "## Links\n",
-    "- [Jupyter notebook](https://nbviewer.jupyter.org/urls/dl.dropbox.com/s/1xlv5oacgobrfd4/mlpef-inference-v0.5-dividiti.ipynb)\n",
+    "- [Jupyter notebook](https://nbviewer.jupyter.org/urls/dl.dropbox.com/s/1xlv5oacgobrfd4/mlperf-inference-v0.5-dividiti.ipynb)\n",
     "- [Source code](https://github.com/ctuning/ck-mlperf/tree/master/program/image-classification-armnn-tflite-loadgen).\n",
     "- [Instructions](https://github.com/ARM-software/armnn-mlperf/blob/master/README.md).\n",
     "\"\"\""
@@ -1043,7 +1055,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**NB:** `mate10pro.tflite-v1.13.mobilenet` would have been a perfectly valid closed submission, just arrived a little bit late after the deadline. `mate10pro.tflite-v1.13.mobilenet-quantized` is an open submission alright, as dividiti hadn't declared submitting quantized results before the deadline."
+    "**NB:** `mate10pro.tflite-v1.13.mobilenet` would have been a perfectly valid closed submission, just finished a little bit late after the deadline. `mate10pro.tflite-v1.13.mobilenet-quantized` is an open submission alright, as dividiti hadn't declared submitting quantized results before the deadline."
    ]
   },
   {
@@ -1231,12 +1243,12 @@
     "- [ ] INT4\n",
     "- [ ] INT8\n",
     "- [ ] INT16\n",
-    "- [ ] UINT8\n",
+    "- [%(numerics_uint8)s] UINT8\n",
     "- [ ] UINT16\n",
     "- [ ] FP11\n",
     "- [ ] FP16\n",
     "- [ ] BF16\n",
-    "- [x] FP32\n",
+    "- [%(numerics_fp32)s] FP32\n",
     "- [ ] Other, please specify:\n",
     "\n",
     "Which of the following techniques does the submission use? (check all that apply)\n",
@@ -1275,7 +1287,7 @@
     "\n",
     "def get_checklist(checklist_template=checklist_template, name='Anton Lokhmotov', email='anton@dividiti.com',\n",
     "                  system='rpi4-tflite-v1.15', system_name='Raspberry Pi 4 (rpi4)', revision='61220457de',\n",
-    "                  division='closed', benchmark='mobilenet', accuracy_pc=12.345, accuracy_met=True):    \n",
+    "                  division='closed', benchmark='mobilenet', accuracy_pc=12.345, accuracy_met=True, numerics='fp32'):\n",
     "    def tick(var): return \"x\" if var else \" \"\n",
     "    print(\"=\" * 100)\n",
     "    print(system)\n",
@@ -1298,6 +1310,10 @@
     "        \"benchmark_resnet\": tick(benchmark=='resnet'),\n",
     "        \"benchmark_other\": tick(benchmark_other),\n",
     "        \"benchmark_other_specify\": benchmark if benchmark_other else '',\n",
+    "        # Table.\n",
+    "        \"system\" : system,\n",
+    "        \"benchmark\" : benchmark,\n",
+    "        \"accuracy_pc\" : \"%.3f\" % accuracy_pc,\n",
     "        # Accuracy.\n",
     "        \"mobilenet_accuracy_met\" : tick(benchmark=='mobilenet' and accuracy_met),\n",
     "        \"resnet_accuracy_met\" : tick(benchmark=='resnet' and accuracy_met),\n",
@@ -1310,17 +1326,16 @@
     "        \"revision_1d0e06e54a\": tick(revision=='1d0e06e54a'),\n",
     "        \"revision_other\":  tick(revision_other), \n",
     "        \"revision_other_specify\": revision if revision_other else '',\n",
-    "        # Table.\n",
-    "        \"system\" : system,\n",
-    "        \"benchmark\" : benchmark,\n",
-    "        \"accuracy_pc\" : \"%.3f\" % accuracy_pc\n",
+    "        # Numerics.\n",
+    "        \"numerics_uint8\": tick(numerics=='uint8'),\n",
+    "        \"numerics_fp32\": tick(numerics=='fp32'),\n",
     "    }\n",
     "    print(checklist)\n",
     "    print(\"-\" * 100)\n",
     "    \n",
     "    return checklist\n",
     "\n",
-    "null = get_checklist(system='rpi4-armnn-v19.08-neon', system_name='Raspberry Pi 4 (rpi4)', benchmark='mobilenet', accuracy_pc=70.241)\n",
+    "null = get_checklist(system='rpi4-armnn-v19.08-neon', system_name='Raspberry Pi 4 (rpi4)', benchmark='mobilenet', accuracy_pc=70.241, numerics='uint8')\n",
     "null = get_checklist(system='hikey960-tflite-v1.15', system_name='Linaro HiKey 960 (hikey960)', benchmark='resnet', accuracy_pc=75.692, revision='deadbeef')"
    ]
   },
@@ -1364,18 +1379,20 @@
     "repos_image_classification_open = [\n",
     "    # firefly\n",
     "    'mlperf.open.image-classification.firefly.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/39\n",
-    "    'mlperf.open.image-classification.firefly.tflite-v1.15.mobilenet-v1-quantized', # ready to upload\n",
+    "    'mlperf.open.image-classification.firefly.tflite-v1.15.mobilenet-v1-quantized', # https://github.com/mlperf/submissions_inference_0_5/pull/127\n",
     "    'mlperf.open.image-classification.firefly.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/40\n",
     "    'mlperf.open.image-classification.firefly.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/120\n",
     "    # hikey960\n",
     "    'mlperf.open.image-classification.hikey960.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/37\n",
-    "    'mlperf.open.image-classification.hikey960.tflite-v1.15.mobilenet-v1-quantized', # ready to upload    \n",
+    "    'mlperf.open.image-classification.hikey960.tflite-v1.15.mobilenet-v1-quantized', # https://github.com/mlperf/submissions_inference_0_5/pull/128\n",
     "    'mlperf.open.image-classification.hikey960.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/38\n",
     "    'mlperf.open.image-classification.hikey960.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/121\n",
     "    # rpi4\n",
     "    'mlperf.open.image-classification.rpi4.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/122\n",
-    "    'mlperf.open.image-classification.rpi4.tflite-v1.15.mobilenet-v1-quantized', # ready to upload    \n",
+    "    'mlperf.open.image-classification.rpi4.tflite-v1.15.mobilenet-v1-quantized', # https://github.com/mlperf/submissions_inference_0_5/pull/129\n",
     "    'mlperf.open.image-classification.rpi4.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/123\n",
+    "    # mate10pro\n",
+    "    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet', # https://github.com/mlperf/submissions_inference_0_5/pull/130\n",
     "]\n",
     "\n",
     "repos = repos_image_classification_closed + repos_image_classification_open"
@@ -1447,7 +1464,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def check_experimental_results(repo_uoa, module_uoa='experiment', tags='mlperf', submitter='dividiti', path=None):\n",
@@ -1727,9 +1746,10 @@
     "                match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
     "                accuracy_pc = float(match.group(1))\n",
     "                checklist = get_checklist(division=division, system=system, system_name=system_json['system_name'],\n",
-    "                                          revision=loadgen_revision, benchmark=benchmark, accuracy_pc=accuracy_pc)\n",
+    "                                          revision=loadgen_revision, benchmark=benchmark, accuracy_pc=accuracy_pc,\n",
+    "                                          numerics=implementation_benchmark_json['weight_data_types'])\n",
     "                with open(checklist_path, 'w') as checklist_file:\n",
-    "                    checklist_file.writelines(checklist)                    \n",
+    "                    checklist_file.writelines(checklist)\n",
     "\n",
     "#             # Trace file (should omit trace from v0.5).\n",
     "#             trace_json_name = 'mlperf_log_trace.json'\n",
@@ -1744,7 +1764,7 @@
     "submitter = 'dividiti'\n",
     "\n",
     "repos = [\n",
-    "     'mlperf.open.image-classification.rpi4.armnn-v19.08.neon', # ready for upload\n",
+    "    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet', # ready to upload\n",
     "]\n",
     "# repos = repos_merged\n",
     "for repo_uoa in repos:\n",
@@ -1773,13 +1793,6 @@
     "        print(results_dir)\n",
     "        print('  |_%s' % checker_log_name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
