Attempt to extract loadgen revision from performance run (unsuccessful).

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -902,7 +902,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO:** accuracy experiment with TFLite for ResNet aborted (estimated 17 hours)."
+    "**NB:** Taccuracy experiment with TFLite for ResNet aborted (estimated to take 17 hours)."
    ]
   },
   {
@@ -1048,6 +1048,9 @@
     "```\n",
     "$ wget https://www.dropbox.com/s/avi6h9m2demz5zr/mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet.zip\n",
+    "\n",
+    "$ wget https://www.dropbox.com/s/soaw27zcjb8hhww/mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet-v1-quantized.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet-v1-quantized.zip\n",
     "```"
    ]
   },
@@ -1408,12 +1411,21 @@
     "repos_image_classification_open_merged = [\n",
     "    # firefly\n",
     "    'mlperf.open.image-classification.firefly.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/39\n",
+    "    'mlperf.open.image-classification.firefly.tflite-v1.15.mobilenet-v1-quantized', # https://github.com/mlperf/submissions_inference_0_5/pull/127\n",
     "    'mlperf.open.image-classification.firefly.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/40\n",
+    "    'mlperf.open.image-classification.firefly.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/120\n",
     "    # hikey960\n",
     "    'mlperf.open.image-classification.hikey960.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/37\n",
+    "    'mlperf.open.image-classification.hikey960.tflite-v1.15.mobilenet-v1-quantized', # https://github.com/mlperf/submissions_inference_0_5/pull/128\n",
     "    'mlperf.open.image-classification.hikey960.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/38\n",
+    "    'mlperf.open.image-classification.hikey960.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/121\n",
+    "    # rpi4\n",
+    "    'mlperf.open.image-classification.rpi4.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/122\n",
+    "    'mlperf.open.image-classification.rpi4.tflite-v1.15.mobilenet-v1-quantized', # https://github.com/mlperf/submissions_inference_0_5/pull/129\n",
+    "    'mlperf.open.image-classification.rpi4.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/123\n",
+    "    # mate10pro\n",
+    "    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet', # https://github.com/mlperf/submissions_inference_0_5/pull/130\n",
     "]\n",
-    "\n",
     "repos_merged = repos_image_classification_closed + repos_image_classification_open_merged"
    ]
   },
@@ -1693,6 +1705,7 @@
     "                point_data_raw = json.load(point_file)\n",
     "            characteristics_list = point_data_raw['characteristics_list']\n",
     "            characteristics = characteristics_list[0]\n",
+    "\n",
     "            # Set the leaf directory.\n",
     "            if mode == 'performance':\n",
     "                run_dir = os.path.join(mode_dir, 'run_%d' % point_idx)\n",
@@ -1701,6 +1714,7 @@
     "            else:\n",
     "                last_dir = mode_dir\n",
     "            print(last_dir)\n",
+    "\n",
     "            # Dump files in the leaf directory.\n",
     "            mlperf_log = characteristics['run'].get('mlperf_log',{})\n",
     "            # Summary file (with errors and warnings in accuracy mode, with statistics in performance mode).\n",
@@ -1714,9 +1728,6 @@
     "            detail_txt_name = 'mlperf_log_detail.txt'\n",
     "            detail_txt_path = os.path.join(last_dir, detail_txt_name)\n",
     "            detail = mlperf_log.get('detail','')\n",
-    "            # Extract revision from the second line e.g.\n",
-    "            # \"pid\": 28660, \"tid\": 28660, \"ts\": 8750ns : version : .5a1 @ 61220457de\n",
-    "            loadgen_revision = detail[1].split('@')[1].strip()\n",
     "            with open(detail_txt_path, 'w') as detail_txt_file:\n",
     "                detail_txt_file.writelines(detail)\n",
     "                print('  |_ %s' % detail_txt_name)\n",
@@ -1739,12 +1750,23 @@
     "                with open(accuracy_txt_path, 'w') as accuracy_txt_file:\n",
     "                    accuracy_txt_file.writelines(accuracy_txt)\n",
     "                    print('  |_ %s [\"%s\"]' % (accuracy_txt_name, accuracy_line))                \n",
+    "                #\n",
     "                # Write checklist for each system, benchmark and scenario under \"measurements/\".\n",
+    "                #\n",
     "                checklist_name = 'submission_checklist.txt'\n",
     "                checklist_path = os.path.join(measurements_dir, system, benchmark, scenario, checklist_name)\n",
     "                system_json = division_systems.get(division_system, default_system_json)\n",
+    "                # Extract accuracy.\n",
     "                match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
     "                accuracy_pc = float(match.group(1))\n",
+    "                # Extract LoadGen revision from the second line of e.g.\n",
+    "                # \"pid\": 28660, \"tid\": 28660, \"ts\": 8750ns : version : .5a1 @ 61220457de\n",
+    "                # FIXME: In practice, the revision may be different for accuracy and performance runs\n",
+    "                # (happened on rpi4 due to a late LoadGen fix). We would prefer to use one from \n",
+    "                # the performance one, as it may be more critical for performance evaluation.\n",
+    "                # However, as we only write the checklist from the accuracy run, we are somewhat stuck.\n",
+    "                loadgen_revision = detail[1].split('@')[1].strip()\n",
+    "                # Write the checklist.\n",
     "                checklist = get_checklist(division=division, system=system, system_name=system_json['system_name'],\n",
     "                                          revision=loadgen_revision, benchmark=benchmark, accuracy_pc=accuracy_pc,\n",
     "                                          numerics=implementation_benchmark_json['weight_data_types'])\n",
@@ -1764,7 +1786,8 @@
     "submitter = 'dividiti'\n",
     "\n",
     "repos = [\n",
-    "    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet', # ready to upload\n",
+    "#    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet-v1-quantized', # not yet eady to upload\n",
+    "    'mlperf.closed.image-classification.rpi4.tflite-v1.15'\n",
     "]\n",
     "# repos = repos_merged\n",
     "for repo_uoa in repos:\n",
