Upload open quantized results on mate10pro with tflite-v1.13.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1396,6 +1396,7 @@
     "    'mlperf.open.image-classification.rpi4.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/123\n",
     "    # mate10pro\n",
     "    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet', # https://github.com/mlperf/submissions_inference_0_5/pull/130\n",
+    "    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet-v1-quantized', # https://github.com/mlperf/submissions_inference_0_5/pull/135\n",
     "]\n",
     "\n",
     "repos = repos_image_classification_closed + repos_image_classification_open"
@@ -1436,8 +1437,9 @@
    "outputs": [],
    "source": [
     "# repos_for_testing = [\n",
-    "#     # mate10pro - for testing the checker\n",
-    "#     'mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.BAD_LOADGEN', \n",
+    "#     'mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.BAD_LOADGEN',\n",
+    "#     'mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl.BAD_RESNET',\n",
+    "#     'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon.BAD_RESNET',\n",
     "# ]"
    ]
   },
@@ -1786,8 +1788,7 @@
     "submitter = 'dividiti'\n",
     "\n",
     "repos = [\n",
-    "#    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet-v1-quantized', # not yet eady to upload\n",
-    "    'mlperf.closed.image-classification.rpi4.tflite-v1.15'\n",
+    "    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet-v1-quantized', # uploaded\n",
     "]\n",
     "# repos = repos_merged\n",
     "for repo_uoa in repos:\n",
