Fix min duration issues by decreasing target latency.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1788,9 +1788,9 @@
     "submitter = 'dividiti'\n",
     "\n",
     "repos = [\n",
-    "    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet-v1-quantized', # uploaded\n",
+    "    'mlperf.open.image-classification.hikey960.fix-min-duration', # results on yet integrated and uploaded to Dropbox\n",
     "]\n",
-    "# repos = repos_merged\n",
+    "#repos = repos_merged\n",
     "for repo_uoa in repos:\n",
     "    check_experimental_results(repo_uoa, path=path, submitter=submitter)\n",
     "    \n",
