--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -446,6 +446,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"templates_velociti\"></a>\n",
+    "### HP Z640 workstation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "velociti = {\n",
+    "    \"division\": \"\",\n",
+    "    \"submitter\": \"dividiti\",\n",
+    "    \"status\": \"available\",\n",
+    "    \"system_name\": \"HP Z640 G1X62EA workstation (velociti)\",\n",
+    "\n",
+    "    \"number_of_nodes\": \"1\",\n",
+    "    \"host_processor_model_name\": \"Intel Xeon CPU E5-2650 v3\",\n",
+    "    \"host_processors_per_node\": \"1\",\n",
+    "    \"host_processor_core_count\": \"10\",\n",
+    "    \"host_processor_frequency\": \"2300 MHz (base); 3000 MHz (turbo)\",\n",
+    "    \"host_processor_caches\": \"L1I$ 10x32 KiB, L1D$ 10x32 KiB; L2$ 10x256 KiB; L3$ 25 MiB\",\n",
+    "    \"host_memory_configuration\": \"DDR4 (max bandwidth 68 GB/s)\",\n",
+    "    \"host_memory_capacity\": \"32 GiB\",\n",
+    "    \"host_storage_capacity\": \"512 GiB\",\n",
+    "    \"host_storage_type\": \"SSD\",\n",
+    "    \"host_processor_interconnect\": \"-\",\n",
+    "    \"host_networking\": \"-\",\n",
+    "    \"host_networking_topology\": \"-\",\n",
+    "\n",
+    "    \"accelerators_per_node\": \"1\",\n",
+    "    \"accelerator_model_name\": \"NVIDIA GeForce GTX 1080\",\n",
+    "    \"accelerator_frequency\": \"1607 MHz (base); 1733 MHz (boost)\",\n",
+    "    \"accelerator_host_interconnect\": \"-\",\n",
+    "    \"accelerator_interconnect\": \"-\",\n",
+    "    \"accelerator_interconnect_topology\": \"-\",\n",
+    "    \"accelerator_memory_capacity\": \"8 GiB\",\n",
+    "    \"accelerator_memory_configuration\": \"GDDR5X (max bandwidth 320 GB/s)\",\n",
+    "    \"accelerator_on-chip_memories\": \"20x48 KiB\",\n",
+    "    \"cooling\": \"standard\",\n",
+    "    \"hw_notes\": \"http://h20195.www2.hp.com/v2/default.aspx?cc=ie&lc=en&oid=7528701; \\\n",
+    "                 https://ark.intel.com/products/81705/Intel-Xeon-Processor-E5-2650-v3-25M-Cache-2_30-GHz; \\\n",
+    "                 http://www.cpu-world.com/CPUs/Xeon/Intel-Xeon%20E5-2650%20v3.html; \\\n",
+    "                 http://www.geforce.co.uk/hardware/10series/geforce-gtx-1080/\",\n",
+    "    \n",
+    "    \"framework\": \"TensorFlow v1.14\",\n",
+    "    \"operating_system\": \"Ubuntu 16.04.6 LTS; kernel 4.4.0-112-generic #135-Ubuntu SMP (Fri Jan 19 11:48:36 UTC 2018)\",\n",
+    "    \"other_software_stack\": \"Driver 430.50; CUDA 10.1; TensorRT 5.1.5; Docker 19.03.3 (build a872fc2); GCC 7.4.0; Python 3.5.2\",\n",
+    "    \"sw_notes\": \"Powered by Collective Knowledge v1.11.4\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"templates_default\"></a>\n",
     "### Default"
    ]
@@ -517,14 +573,17 @@
     "    'firefly'   : firefly,\n",
     "    'hikey960'  : hikey960,\n",
     "    'mate10pro' : mate10pro,\n",
-    "    'rpi4' : rpi4,\n",
+    "    'rpi4'      : rpi4,\n",
+    "    'velociti'  : velociti\n",
     "}\n",
     "\n",
     "divisions = [ 'open', 'closed' ]\n",
-    "platforms = [ 'firefly', 'hikey960', 'mate10pro', 'rpi4' ]\n",
+    "platforms = [ 'firefly', 'hikey960', 'mate10pro', 'rpi4', 'velociti' ]\n",
     "for division in divisions:\n",
     "    for platform in platforms:\n",
-    "        if platform == 'mate10pro':\n",
+    "        if platform == 'velociti':\n",
+    "            libraries = [ 'tensorflow-v1.14' ]\n",
+    "        elif platform == 'mate10pro':\n",
     "            libraries = [ 'tflite-v1.13', 'armnn-v19.08' ]\n",
     "        else:\n",
     "            libraries = [ 'tflite-v1.15', 'armnn-v19.08' ]\n",
@@ -535,6 +594,9 @@
     "                else:\n",
     "                    backends = [ 'neon', 'opencl' ]\n",
     "                library_backends = [ library+'-'+backend for backend in backends ]\n",
+    "            elif library == 'tensorflow-v1.14':\n",
+    "                backends = [ 'cpu', 'cuda', 'tensorrt', 'tensorrt-dynamic' ]\n",
+    "                library_backends = [ library+'-'+backend for backend in backends ]\n",
     "            else:\n",
     "                library_backends = [ library ]\n",
     "            for library_backend in library_backends:\n",
@@ -542,19 +604,26 @@
     "                frameworks = {\n",
     "                    'armnn-v19.08-opencl' : 'ArmNN v19.08 (OpenCL)',\n",
     "                    'armnn-v19.08-neon' : 'ArmNN v19.08 (Neon)',\n",
-    "                    'tflite-v1.13' : 'TFLite v1.13.1',\n",
-    "                    'tflite-v1.15' : 'TFLite v1.15.0-rc2',\n",
+    "                    'tflite-v1.13': 'TFLite v1.13.1',\n",
+    "                    'tflite-v1.15': 'TFLite v1.15.0-rc2',\n",
+    "                    'tensorflow-v1.14-cpu': 'TensorFlow v1.14 (CPU)',\n",
+    "                    'tensorflow-v1.14-cuda': 'TensorFlow v1.14 (CUDA)',\n",
+    "                    'tensorflow-v1.14-tensorrt': 'TensorFlow v1.14 (TensorRT-static)',\n",
+    "                    'tensorflow-v1.14-tensorrt-dynamic': 'TensorFlow v1.14 (TensorRT-dynamic)',\n",
     "                }\n",
     "                template = deepcopy(platform_templates[platform])\n",
     "                template.update({\n",
     "                    'division'  : division,\n",
     "                    'framework' : frameworks[library_backend]\n",
     "                })\n",
-    "                if not library_backend.endswith('opencl'):\n",
+    "                if (not library_backend.startswith('tensorflow') and not library_backend.endswith('opencl')) \\\n",
+    "                or library_backend.endswith('cpu'):\n",
     "                    template.update({\n",
     "                        'accelerator_frequency' : '-',\n",
     "                        'accelerator_memory_capacity' : '-',\n",
+    "                        'accelerator_memory_configuration': '-',\n",
     "                        'accelerator_model_name' : '-',\n",
+    "                        'accelerator_on-chip_memories': '-',\n",
     "                        'accelerators_per_node' : '0',\n",
     "                    })\n",
     "                division_systems[division_system] = template\n",
@@ -592,7 +661,7 @@
     "    \"weight_transformations\": \"required\"\n",
     "}\n",
     "\n",
-    "# For each implementation.\n",
+    "# For each image classification implementation.\n",
     "for implementation in [ 'image-classification-tflite', 'image-classification-armnn-tflite' ]:\n",
     "    # Add MobileNet.\n",
     "    implementation_mobilenet = implementation+'-'+'mobilenet'\n",
@@ -657,8 +726,33 @@
     "    add_implementation_mobilenet(implementation_benchmarks, version=2, multiplier=1.3, resolution=224)\n",
     "    add_implementation_mobilenet(implementation_benchmarks, version=2, multiplier=1.4, resolution=224)\n",
     "\n",
-    "# from pprint import pprint\n",
-    "# pprint(implementation_benchmarks)"
+    "    \n",
+    "# For each object detection implementation.\n",
+    "for implementation in [ 'mlperf-inference-vision' ]:\n",
+    "    for benchmark in [ \\\n",
+    "        'rcnn-nas-lowproposals', \\\n",
+    "        'rcnn-resnet50-lowproposals', \\\n",
+    "        'rcnn-resnet101-lowproposals', \\\n",
+    "        'rcnn-inception-resnet-v2-lowproposals', \\\n",
+    "        'rcnn-inception-v2', \\\n",
+    "        'ssd-inception-v2', \\\n",
+    "        'ssd-mobilenet-v1-quantized-mlperf', \\\n",
+    "        'ssd-mobilenet-v1-non-quantized-mlperf', \\\n",
+    "        'ssd-mobilenet-v1-fpn', \\\n",
+    "        'ssd-resnet50-fpn', \\\n",
+    "        'ssdlite-mobilenet-v2', \\\n",
+    "        'yolo-v3' ]:\n",
+    "        implementation_benchmark = implementation+'-'+benchmark\n",
+    "        implementation_benchmarks[implementation_benchmark] = {\n",
+    "            \"input_data_types\": \"fp32\",\n",
+    "            \"weight_data_types\": \"fp32\",\n",
+    "            \"retraining\": \"no\",\n",
+    "            \"starting_weights_filename\": \"TODO\",\n",
+    "            \"weight_transformations\": \"None (TensorFlow)\"\n",
+    "        }\n",
+    "    \n",
+    "from pprint import pprint\n",
+    "pprint(implementation_benchmarks)"
    ]
   },
   {
@@ -688,6 +782,19 @@
     "- [Jupyter notebook](https://nbviewer.jupyter.org/urls/dl.dropbox.com/s/1xlv5oacgobrfd4/mlperf-inference-v0.5-dividiti.ipynb)\n",
     "- [Source code](https://github.com/ctuning/ck-mlperf/tree/master/program/image-classification-armnn-tflite-loadgen).\n",
     "- [Instructions](https://github.com/ARM-software/armnn-mlperf/blob/master/README.md).\n",
+    "\"\"\"\n",
+    "\n",
+    "implementation_readmes['mlperf-inference-vision'] = \\\n",
+    "\"\"\"# MLPerf Inference - Object Detection - TensorFlow\n",
+    "\n",
+    "This Python implementation is the official MLPerf Inference vision application, modified to support other\n",
+    "object detection models and run with TensorRT.\n",
+    "\n",
+    "## Links\n",
+    "- [CK wrapper](https://github.com/ctuning/ck-object-detection/tree/master/program/mlperf-inference-vision).\n",
+    "- [vision_with_ck branch in dividiti's fork of mlperf/inference](https://github.com/dividiti/inference/tree/vision_with_ck).\n",
+    "- [Docker image with instructions](https://github.com/ctuning/ck-mlperf/tree/master/docker/mlperf-inference-vision-with-ck.tensorrt.ubuntu-18.04).\n",
+    "- [Jupyter notebook](https://nbviewer.jupyter.org/urls/dl.dropbox.com/s/1xlv5oacgobrfd4/mlperf-inference-v0.5-dividiti.ipynb)\n",
     "\"\"\""
    ]
   },
@@ -698,9 +805,13 @@
    "outputs": [],
    "source": [
     "implementation_paths = {}\n",
-    "for implementation in [ 'image-classification-tflite', 'image-classification-armnn-tflite' ]:\n",
-    "    implementation_loadgen = implementation+'-loadgen'\n",
-    "    r = ck.access({'action':'find', 'repo_uoa':'ck-mlperf', 'module_uoa':'program', 'data_uoa':implementation_loadgen})\n",
+    "for implementation in [ 'image-classification-tflite', 'image-classification-armnn-tflite', 'mlperf-inference-vision' ]:\n",
+    "    if implementation.startswith('image-classification'):\n",
+    "        implementation+='-loadgen'\n",
+    "        repo_uoa = 'ck-mlperf'\n",
+    "    else: # TODO: move to ck-mlperf, then no need for special case.\n",
+    "        repo_uoa = 'ck-object-detection'\n",
+    "    r = ck.access({'action':'find', 'repo_uoa':repo_uoa, 'module_uoa':'program', 'data_uoa':implementation})\n",
     "    if r['return']>0:\n",
     "        print('Error: %s' % r['error'])\n",
     "        exit(1)\n",
@@ -713,6 +824,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: update for object detection.\n",
     "measurements_readmes = {}\n",
     "for division_upper in [ 'Closed', 'Open' ]:\n",
     "    division_lower = division_upper.lower()\n",
@@ -1124,10 +1236,10 @@
     "|          |           |              |          |\n",
     "\n",
     "Scenario (check all that apply):\n",
-    "- [x] Single-Stream\n",
-    "- [ ] Multi-Stream\n",
-    "- [ ] Server\n",
-    "- [ ] Offline\n",
+    "- [%(scenario_singlestream)s] Single-Stream\n",
+    "- [%(scenario_multistream)s] Multi-Stream\n",
+    "- [%(scenario_server)s] Server\n",
+    "- [%(scenario_offline)s] Offline\n",
     "\n",
     "For each SUT, does the submission meet the latency target for each\n",
     "combination of benchmark and scenario? (check all that apply)\n",
@@ -1290,7 +1402,8 @@
     "\n",
     "def get_checklist(checklist_template=checklist_template, name='Anton Lokhmotov', email='anton@dividiti.com',\n",
     "                  system='rpi4-tflite-v1.15', system_name='Raspberry Pi 4 (rpi4)', revision='61220457de',\n",
-    "                  division='closed', benchmark='mobilenet', accuracy_pc=12.345, accuracy_met=True, numerics='fp32'):\n",
+    "                  division='closed', benchmark='mobilenet', scenario='singlestream',\n",
+    "                  accuracy_pc=12.345, accuracy_met=True, numerics='fp32'):\n",
     "    def tick(var): return \"x\" if var else \" \"\n",
     "    print(\"=\" * 100)\n",
     "    print(system)\n",
@@ -1317,6 +1430,11 @@
     "        \"system\" : system,\n",
     "        \"benchmark\" : benchmark,\n",
     "        \"accuracy_pc\" : \"%.3f\" % accuracy_pc,\n",
+    "        # Scenario.\n",
+    "        \"scenario_singlestream\": tick(scenario=='singlestream'),\n",
+    "        \"scenario_multistream\": tick(scenario=='multistream'),\n",
+    "        \"scenario_server\": tick(scenario=='server'),\n",
+    "        \"scenario_offline\": tick(scenario=='offline'),\n",
     "        # Accuracy.\n",
     "        \"mobilenet_accuracy_met\" : tick(benchmark=='mobilenet' and accuracy_met),\n",
     "        \"resnet_accuracy_met\" : tick(benchmark=='resnet' and accuracy_met),\n",
@@ -1397,9 +1515,7 @@
     "    # mate10pro\n",
     "    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet', # https://github.com/mlperf/submissions_inference_0_5/pull/130\n",
     "    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet-v1-quantized', # https://github.com/mlperf/submissions_inference_0_5/pull/135\n",
-    "]\n",
-    "\n",
-    "repos = repos_image_classification_closed + repos_image_classification_open"
+    "]"
    ]
   },
   {
@@ -1408,26 +1524,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Merged on the submission day.\n",
-    "repos_image_classification_open_merged = [\n",
-    "    # firefly\n",
-    "    'mlperf.open.image-classification.firefly.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/39\n",
-    "    'mlperf.open.image-classification.firefly.tflite-v1.15.mobilenet-v1-quantized', # https://github.com/mlperf/submissions_inference_0_5/pull/127\n",
-    "    'mlperf.open.image-classification.firefly.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/40\n",
-    "    'mlperf.open.image-classification.firefly.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/120\n",
-    "    # hikey960\n",
-    "    'mlperf.open.image-classification.hikey960.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/37\n",
-    "    'mlperf.open.image-classification.hikey960.tflite-v1.15.mobilenet-v1-quantized', # https://github.com/mlperf/submissions_inference_0_5/pull/128\n",
-    "    'mlperf.open.image-classification.hikey960.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/38\n",
-    "    'mlperf.open.image-classification.hikey960.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/121\n",
-    "    # rpi4\n",
-    "    'mlperf.open.image-classification.rpi4.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/122\n",
-    "    'mlperf.open.image-classification.rpi4.tflite-v1.15.mobilenet-v1-quantized', # https://github.com/mlperf/submissions_inference_0_5/pull/129\n",
-    "    'mlperf.open.image-classification.rpi4.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/123\n",
-    "    # mate10pro\n",
-    "    'mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet', # https://github.com/mlperf/submissions_inference_0_5/pull/130\n",
-    "]\n",
-    "repos_merged = repos_image_classification_closed + repos_image_classification_open_merged"
+    "# Already merged.\n",
+    "repos_merged = repos_image_classification_closed + repos_image_classification_open\n",
+    "repos = repos_merged"
    ]
   },
   {
@@ -1466,7 +1565,9 @@
    "outputs": [],
    "source": [
     "# Locate upstream master.\n",
-    "r = ck.access({'action':'locate', 'module_uoa':'env', 'tags':'mlperf,inference,source,upstream.master'})\n",
+    "#r = ck.access({'action':'locate', 'module_uoa':'env', 'tags':'mlperf,inference,source,upstream.master'})\n",
+    "# Locate variation with submission checker fixes.\n",
+    "r = ck.access({'action':'locate', 'module_uoa':'env', 'tags':'mlperf,inference,source,upstream.pr511'})\n",
     "if r['return']>0:\n",
     "    print('Error: %s' % r['error'])\n",
     "    exit(1)\n",
@@ -1509,7 +1610,12 @@
     "        tags = r['dict']['tags']\n",
     "        #print(tags)\n",
     "        backend = ''\n",
-    "        if 'accuracy' in tags:\n",
+    "        preprocessing = ''\n",
+    "        if 'velociti' in tags:\n",
+    "            # Expected format: [ \"mlperf\", \"open\", \"object-detection\", \"velociti\", \"cpu\", \"rcnn-inception-resnet-v2-lowproposals\", \"singlestream\", \"accuracy\" ]\n",
+    "            (_, division, task, platform, backend, benchmark, scenario, mode) = tags\n",
+    "            library = 'tensorflow-v1.14'\n",
+    "        elif 'accuracy' in tags:\n",
     "            # FIXME: With the benefit of hindsight, [ ..., \"armnn-v19.08\", \"neon\", ... ] should have come \n",
     "            # as one tag \"armnn-v19.08-neon\", since we join them in this notebook anyway.\n",
     "            if 'neon' in tags or 'opencl' in tags:\n",
@@ -1653,6 +1759,8 @@
     "        # Copy 'user.conf' from implementation source.\n",
     "        user_conf_name = 'user.conf'\n",
     "        implementation_path = implementation_paths.get(implementation, '')\n",
+    "#         pprint(implementation)\n",
+    "#         pprint(implementation_paths)\n",
     "        if implementation_path != '':\n",
     "            user_conf_path = os.path.join(implementation_path, user_conf_name)\n",
     "            copy2(user_conf_path, scenario_dir)\n",
@@ -1788,7 +1896,8 @@
     "submitter = 'dividiti'\n",
     "\n",
     "repos = [\n",
-    "    'mlperf.open.image-classification.hikey960.fix-min-duration', # results on yet integrated and uploaded to Dropbox\n",
+    "    # 'mlperf.open.image-classification.hikey960.fix-min-duration', # NB: results NOT yet integrated and uploaded to Dropbox\n",
+    "    'mlperf-inference-vision-experiments-count5'\n",
     "]\n",
     "#repos = repos_merged\n",
     "for repo_uoa in repos:\n",
