Parse object detection accuracy.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -190,9 +190,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_fig_dir = os.path.join(os.path.expanduser(\"~\"), 'mlperf-dividiti')\n",
-    "if not os.path.exists(save_fig_dir):\n",
-    "    os.mkdir(save_fig_dir)"
+    "# FIXME: Do not hardcode - locate via CK.\n",
+    "pythonpath_coco = '/home/anton/CK_TOOLS/tool-coco-master-gcc-8.3.0-compiler.python-3.6.9-linux-64/'\n",
+    "sys.path.append(pythonpath_coco)\n",
+    "from pycocotools.coco import COCO"
    ]
   },
   {
@@ -1851,24 +1852,36 @@
     "                json.dump(mlperf_log.get('accuracy',{}), accuracy_json_file, indent=2)\n",
     "                print('  |_ %s' % accuracy_json_name)\n",
     "            if mode == 'accuracy':\n",
-    "                accuracy_imagenet_py = os.path.join(upstream_path, 'v0.5', 'classification_and_detection', 'tools', 'accuracy-imagenet.py')\n",
-    "                imagenet_val_file = '$HOME/CK_TOOLS/dataset-imagenet-ilsvrc2012-aux/val.txt' # FIXME: Do not hardcode - locate via CK.\n",
     "                accuracy_txt_name = 'accuracy.txt'\n",
     "                accuracy_txt_path = os.path.join(last_dir, accuracy_txt_name)\n",
-    "                accuracy_txt = !python3 $accuracy_imagenet_py --imagenet-val-file $imagenet_val_file --mlperf-accuracy-file $accuracy_json_path\n",
-    "                accuracy_line = accuracy_txt[0]\n",
+    "                if task=='image-classification':\n",
+    "                    accuracy_imagenet_py = os.path.join(upstream_path, 'v0.5', 'classification_and_detection', 'tools', 'accuracy-imagenet.py')\n",
+    "                    imagenet_val_file = '$HOME/CK_TOOLS/dataset-imagenet-ilsvrc2012-aux/val.txt' # FIXME: Do not hardcode - locate via CK.\n",
+    "                    accuracy_txt = !python3 $accuracy_imagenet_py --imagenet-val-file $imagenet_val_file --mlperf-accuracy-file $accuracy_json_path\n",
+    "                    # The only line is e.g. ...\n",
+    "                    accuracy_line = accuracy_txt[0]\n",
+    "                    match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
+    "                    accuracy_pc = float(match.group(1))\n",
+    "                elif task=='object-detection':\n",
+    "                    accuracy_coco_py = os.path.join(upstream_path, 'v0.5', 'classification_and_detection', 'tools', 'accuracy-coco.py')\n",
+    "                    coco_dir = '/home/anton/CK_TOOLS/dataset-coco-2017-val' # FIXME: Do not hardcode - locate via CK.\n",
+    "                    accuracy_txt = !python3 $accuracy_coco_py --coco-dir $coco_dir --mlperf-accuracy-file $accuracy_json_path\n",
+    "                    # The last line is e.g. \"mAP=13.323%\".\n",
+    "                    accuracy_line = accuracy_txt[-1]\n",
+    "                    match = re.match('mAP\\=([\\d\\.]+)\\%', accuracy_line)\n",
+    "                    accuracy_pc = float(match.group(1))\n",
+    "                else:\n",
+    "                    raise \"Invalid task '%s'!\" % task\n",
     "                with open(accuracy_txt_path, 'w') as accuracy_txt_file:\n",
     "                    accuracy_txt_file.writelines(accuracy_txt)\n",
-    "                    print('  |_ %s [\"%s\"]' % (accuracy_txt_name, accuracy_line))                \n",
+    "                    print('  |_ %s [%.3f%% parsed from \"%s\"]' % (accuracy_txt_name, accuracy_pc, accuracy_line))\n",
     "                #\n",
     "                # Write checklist for each system, benchmark and scenario under \"measurements/\".\n",
     "                #\n",
     "                checklist_name = 'submission_checklist.txt'\n",
     "                checklist_path = os.path.join(measurements_dir, system, benchmark, scenario, checklist_name)\n",
     "                system_json = division_systems.get(division_system, default_system_json)\n",
-    "                # Extract accuracy.\n",
-    "                match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
-    "                accuracy_pc = float(match.group(1))\n",
+    "\n",
     "                # Extract LoadGen revision from the second line of e.g.\n",
     "                # \"pid\": 28660, \"tid\": 28660, \"ts\": 8750ns : version : .5a1 @ 61220457de\n",
     "                # FIXME: In practice, the revision may be different for accuracy and performance runs\n",
