Add true(-ish) performance_sample_count.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1219,7 +1219,7 @@
     "### Single Stream Results Table\n",
     "| SUT Name | Benchmark | Query Count | Accuracy |\n",
     "|----------|-----------|-------------|----------|\n",
-    "| %(system)s | %(benchmark)s | 50000 | %(accuracy_pc)s%% |\n",
+    "| %(system)s | %(benchmark)s | %(query_count)s | %(accuracy_pc)s%% |\n",
     "\n",
     "### Multi-Stream Results Table\n",
     "| SUT Name | Benchmark | Query Count |  Accuracy | 97%%-tile Latency | 99%%-tile Latency |\n",
@@ -1281,16 +1281,16 @@
     "- [ ] No\n",
     "\n",
     "How many samples are loaded into the QSL in performance mode?\n",
-    "1024\n",
+    "%(performance_sample_count)s\n",
     "\n",
     "For each SUT and scenario, does the number of loaded samples in the\n",
     "QSL in performance mode meet the minimum requirement?  (check all that\n",
     "apply)\n",
-    "- [x] Yes (ResNet and MobileNet 1,024 samples)\n",
-    "- [ ] Yes (SSD-MobileNet 256 samples)\n",
-    "- [ ] Yes (SSD-1200 64 samples)\n",
+    "- [%(performance_sample_count_1024)s] Yes (ResNet and MobileNet 1,024 samples)\n",
+    "- [%(performance_sample_count_256)s] Yes (SSD-MobileNet 256 samples)\n",
+    "- [%(performance_sample_count_64)s] Yes (SSD-1200 64 samples)\n",
     "- [ ] Yes (NMT 3,903,900 samples)\n",
-    "- [ ] No\n",
+    "- [%(performance_sample_count_not_met)s] No\n",
     "\n",
     "For each SUT and scenario, is the experimental duration greater than\n",
     "or equal to 60 seconds?  (check one)\n",
@@ -1403,7 +1403,8 @@
     "\n",
     "def get_checklist(checklist_template=checklist_template, name='Anton Lokhmotov', email='anton@dividiti.com',\n",
     "                  system='rpi4-tflite-v1.15', system_name='Raspberry Pi 4 (rpi4)', revision='61220457de',\n",
-    "                  division='closed', benchmark='mobilenet', scenario='singlestream',\n",
+    "                  division='closed', task='image-classification', benchmark='mobilenet', scenario='singlestream',\n",
+    "                  performance_sample_count=1024, performance_sample_count_met=True,\n",
     "                  accuracy_pc=12.345, accuracy_met=True, numerics='fp32'):\n",
     "    def tick(var): return \"x\" if var else \" \"\n",
     "    print(\"=\" * 100)\n",
@@ -1415,6 +1416,8 @@
     "        accuracy_met = accuracy_pc >= 71.676*0.98\n",
     "    elif benchmark=='resnet':\n",
     "        accuracy_met = accuracy_pc >= 76.456*0.99\n",
+    "    else:\n",
+    "        accuracy_met = accuracy_met and accuracy_pc > 0\n",
     "    checklist = checklist_template % {\n",
     "        \"name\" : name,\n",
     "        \"email\" : email,\n",
@@ -1430,6 +1433,7 @@
     "        # Table.\n",
     "        \"system\" : system,\n",
     "        \"benchmark\" : benchmark,\n",
+    "        \"query_count\": 50000 if task=='image_classification' else 5000,\n",
     "        \"accuracy_pc\" : \"%.3f\" % accuracy_pc,\n",
     "        # Scenario.\n",
     "        \"scenario_singlestream\": tick(scenario=='singlestream'),\n",
@@ -1440,6 +1444,12 @@
     "        \"mobilenet_accuracy_met\" : tick(benchmark=='mobilenet' and accuracy_met),\n",
     "        \"resnet_accuracy_met\" : tick(benchmark=='resnet' and accuracy_met),\n",
     "        \"accuracy_not_met\" : tick(not accuracy_met),\n",
+    "        # \"How many samples are loaded into the QSL in performance mode?\"\n",
+    "        \"performance_sample_count\": performance_sample_count,\n",
+    "        \"performance_sample_count_1024\": tick(performance_sample_count==1024),\n",
+    "        \"performance_sample_count_256\": tick(performance_sample_count==256),\n",
+    "        \"performance_sample_count_64\": tick(performance_sample_count==64),\n",
+    "        \"performance_sample_count_not_met\": tick(not performance_sample_count_met), # TODO\n",
     "        # LoadGen revision.\n",
     "        \"revision_61220457de\": tick(revision=='61220457de'),\n",
     "        \"revision_5684c11e39\": tick(revision=='5684c11e39'),\n",
@@ -1549,14 +1559,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!ck recache repo\n",
-    "for repo_uoa in repos:\n",
-    "    print(\"=\" * 100)\n",
-    "    print(repo_uoa)\n",
-    "    print(\"=\" * 100)\n",
-    "    !ck list $repo_uoa:experiment:* | sort\n",
-    "    print(\"-\" * 100)\n",
-    "    print(\"\")"
+    "# #!ck recache repo\n",
+    "# for repo_uoa in repos:\n",
+    "#     print(\"=\" * 100)\n",
+    "#     print(repo_uoa)\n",
+    "#     print(\"=\" * 100)\n",
+    "#     !ck list $repo_uoa:experiment:* | sort\n",
+    "#     print(\"-\" * 100)\n",
+    "#     print(\"\")"
    ]
   },
   {
@@ -1858,13 +1868,14 @@
     "                    accuracy_imagenet_py = os.path.join(upstream_path, 'v0.5', 'classification_and_detection', 'tools', 'accuracy-imagenet.py')\n",
     "                    imagenet_val_file = '$HOME/CK_TOOLS/dataset-imagenet-ilsvrc2012-aux/val.txt' # FIXME: Do not hardcode - locate via CK.\n",
     "                    accuracy_txt = !python3 $accuracy_imagenet_py --imagenet-val-file $imagenet_val_file --mlperf-accuracy-file $accuracy_json_path\n",
-    "                    # The only line is e.g. ...\n",
+    "                    # The only line is e.g. \"...\"\n",
     "                    accuracy_line = accuracy_txt[0]\n",
     "                    match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
     "                    accuracy_pc = float(match.group(1))\n",
     "                elif task=='object-detection':\n",
     "                    accuracy_coco_py = os.path.join(upstream_path, 'v0.5', 'classification_and_detection', 'tools', 'accuracy-coco.py')\n",
     "                    coco_dir = '/home/anton/CK_TOOLS/dataset-coco-2017-val' # FIXME: Do not hardcode - locate via CK.\n",
+    "                    os.environ['PYTHONPATH'] = pythonpath_coco+':'+os.environ.get('PYTHONPATH','')\n",
     "                    accuracy_txt = !python3 $accuracy_coco_py --coco-dir $coco_dir --mlperf-accuracy-file $accuracy_json_path\n",
     "                    # The last line is e.g. \"mAP=13.323%\".\n",
     "                    accuracy_line = accuracy_txt[-1]\n",
@@ -1889,9 +1900,15 @@
     "                # the performance one, as it may be more critical for performance evaluation.\n",
     "                # However, as we only write the checklist from the accuracy run, we are somewhat stuck.\n",
     "                loadgen_revision = detail[1].split('@')[1].strip()\n",
+    "                \n",
+    "                # FIXME: The actual performance_sample_count can be extracted from the performance run.\n",
+    "                # Again, this is not available to us here.\n",
+    "                # We could check in user.conf, but we would need to parse it.\n",
+    "                performance_sample_count = 1024 if task=='image-classification' else 256\n",
     "                # Write the checklist.\n",
-    "                checklist = get_checklist(division=division, system=system, system_name=system_json['system_name'],\n",
+    "                checklist = get_checklist(division=division, system=system, system_name=system_json['system_name'], task=task,\n",
     "                                          revision=loadgen_revision, benchmark=benchmark, accuracy_pc=accuracy_pc,\n",
+    "                                          performance_sample_count=performance_sample_count,\n",
     "                                          numerics=implementation_benchmark_json['weight_data_types'])\n",
     "                with open(checklist_path, 'w') as checklist_file:\n",
     "                    checklist_file.writelines(checklist)\n",
