Dump accuracy.txt with new lines.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1550,6 +1550,7 @@
     "#     'mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.BAD_LOADGEN',\n",
     "#     'mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl.BAD_RESNET',\n",
     "#     'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon.BAD_RESNET',\n",
+    "#     'mlperf-inference-vision-experiments-count5'\n",
     "# ]"
    ]
   },
@@ -1576,9 +1577,9 @@
    "outputs": [],
    "source": [
     "# Locate upstream master.\n",
-    "#r = ck.access({'action':'locate', 'module_uoa':'env', 'tags':'mlperf,inference,source,upstream.master'})\n",
-    "# Locate variation with submission checker fixes.\n",
-    "r = ck.access({'action':'locate', 'module_uoa':'env', 'tags':'mlperf,inference,source,upstream.pr511'})\n",
+    "r = ck.access({'action':'locate', 'module_uoa':'env', 'tags':'mlperf,inference,source,upstream.master'})\n",
+    "# # Locate variation with submission checker fixes.\n",
+    "# r = ck.access({'action':'locate', 'module_uoa':'env', 'tags':'mlperf,inference,source,upstream.pr511'})\n",
     "if r['return']>0:\n",
     "    print('Error: %s' % r['error'])\n",
     "    exit(1)\n",
@@ -1609,7 +1610,7 @@
     "        exit(1)\n",
     "    experiments = r['lst']\n",
     "\n",
-    "    dfs = []\n",
+    "#     first_benchmark = None\n",
     "    for experiment in experiments:\n",
     "        data_uoa = experiment['data_uoa']\n",
     "        r = ck.access({'action':'list_points', 'repo_uoa':repo_uoa, 'module_uoa':module_uoa, 'data_uoa':data_uoa})\n",
@@ -1644,8 +1645,12 @@
     "                (_, division, task, platform, library, benchmark, scenario, mode) = tags\n",
     "        else:\n",
     "            raise \"Expected 'accuracy' or 'performance' in tags!\"\n",
-    "            \n",
+    "\n",
     "        organization = submitter\n",
+    "        \n",
+    "#         print(mode)\n",
+    "#         if not first_benchmark: first_benchmark = benchmark\n",
+    "#         if benchmark!=first_benchmark: continue\n",
     "\n",
     "        if backend != '':\n",
     "            system = platform+'-'+library+'-'+backend\n",
@@ -1884,7 +1889,7 @@
     "                else:\n",
     "                    raise \"Invalid task '%s'!\" % task\n",
     "                with open(accuracy_txt_path, 'w') as accuracy_txt_file:\n",
-    "                    accuracy_txt_file.writelines(accuracy_txt)\n",
+    "                    accuracy_txt_file.writelines('\\n'.join(accuracy_txt))\n",
     "                    print('  |_ %s [%.3f%% parsed from \"%s\"]' % (accuracy_txt_name, accuracy_pc, accuracy_line))\n",
     "                #\n",
     "                # Write checklist for each system, benchmark and scenario under \"measurements/\".\n",
@@ -1917,7 +1922,7 @@
     "#             trace_json_name = 'mlperf_log_trace.json'\n",
     "#             trace_json_path = os.path.join(last_dir, trace_json_name)\n",
     "#             with open(trace_json_path, 'w') as trace_json_file:\n",
-    "#                 json.dump(mlperf_log.get('trace',{}), trace_json_file, indent=2)    \n",
+    "#                 json.dump(mlperf_log.get('trace',{}), trace_json_file, indent=2)\n",
     "\n",
     "    return\n",
     "\n",
@@ -1925,11 +1930,11 @@
     "path = '/home/anton/projects/mlperf/'\n",
     "submitter = 'dividiti'\n",
     "\n",
+    "#repos = repos_merged\n",
     "repos = [\n",
     "    # 'mlperf.open.image-classification.hikey960.fix-min-duration', # NB: results NOT yet integrated and uploaded to Dropbox\n",
-    "    'mlperf-inference-vision-experiments-count5'\n",
+    "    'mlperf-inference-vision-experiments.cpu_cuda'\n",
     "]\n",
-    "#repos = repos_merged\n",
     "for repo_uoa in repos:\n",
     "    check_experimental_results(repo_uoa, path=path, submitter=submitter)\n",
     "    \n",
